--- a/config/database.yml
+++ b/config/database.yml
@@ -10,9 +10,10 @@ common: &common
   password:
 
 development:
-  <<: *common
-  database: rails-lipton
-
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
