--- a/config/database.yml
+++ b/config/database.yml
@@ -10,10 +10,8 @@ common: &common
   password:
 
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  <<: *common
+  database: rails-lipton
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
