--- a/config/database.yml
+++ b/config/database.yml
@@ -8,10 +8,16 @@ common: &common
   adapter: postgresql
   username: rails
   password:
+  database: rails-lipton
+
+sqlite:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
 
 development:
   <<: *common
-  database: rails-lipton
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
