--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,6 @@ common: &common
   password:
   database: rails-lipton
 
-sqlite: &sqlite
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
-
 development:
   <<: *common
 
@@ -27,5 +21,9 @@ test:
   database: rails-lipton-test
 
 production:
-  <<: *common
-  database: rails-lipton-production
+  adapter: mysql2
+  encoding: utf8
+  database: rails-lipton
+  username: root
+  password: root
+  host: localhost
