--- a/config/database.yml
+++ b/config/database.yml
@@ -21,10 +21,5 @@ test:
   database: rails-lipton-test
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  database: rails-lipton
-  username: root
-  password: root
-  host: localhost
-  reconnect: true
+  <<: *common
+  password: rails
