--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,11 @@ common: &common
   password:
   database: rails-lipton
 
-development:
-  <<: *common
+  adapter: myysql2
+  encoding: utf8
+  database: rails-lipton
+  username: mysql
+  password: mysql
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -21,8 +24,5 @@ test:
   database: rails-lipton-test
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  database: rails-lipton
-  username: root
-  password: root
+  <<: *common
+  database: rails-lipton-production
