--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,10 @@ common: &common
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+
+development:
+  <<: *common
+
 test:
   <<: *common
   database: rails-lipton-test
